# zed-open-capture-ros

./: CMakeLists.txt  README.md  package.xml
config/: SN21558623.conf
launch/: zed_node.launch
src/: zed_node.cpp
