<?xml version="1.0"?>
<package format="2">
    <name>zed-open-capture-ros</name>
    <version>0.0.1</version>
    <description>
      A simple zed camera driver which only use CPU and only publish left and right raw images.
    </description>
    <author>Di Zeng</author>
    <author>di.zeng@transcendrobotics.com</author>
    <author>jypjypjypjyp@hotmail.com</author>
    <maintainer email="jypjypjypjyp@hotmail.com">Yupeng Jia</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>sensor_msgs</depend>

    <export>
    </export>

</package>


